chore(app): align snippet component using only proxi, fix store docs.

--- a/src/scss/general/utils.scss
+++ b/src/scss/general/utils.scss
@@ -52,6 +52,7 @@
     margin-inline: rem(2);
     padding: em(2) em(3);
     font-size: 0.8em;
+    z-index: 1;
 
     &::after {
         content: '';
@@ -61,7 +62,7 @@
         left: calc(#{rem(2)} * -1);
         /* stylelint-disable-next-line  declaration-block-no-redundant-longhand-properties */
         right: calc(#{rem(2)} * -1);
-        background: rgba($black, 0.3);
+        background: rgba($black, 0.2);
         z-index: -1;
         border-radius: rem(4);
     }
